--- a/Problems/The minimum value of N numbers/task.html
+++ b/Problems/The minimum value of N numbers/task.html
@@ -3,8 +3,8 @@
 <html>
  <head></head>
  <body>
-  <p>Write a program that finds the minimum value of N numbers.<br> <br> The first line contains the number N.<br> The second line contains N numbers separated by spaces.<br> &nbsp;</p> 
-  <p>Output an integer number which is&nbsp;the minimum of N numbers.</p>
+  <p>Write a program that finds the minimum value of N numbers.<br> <br> The first line contains the number N.<br> The second line contains N numbers separated by spaces.<br> </p> 
+  <p>Output an integer number which is the minimum of N numbers.</p>
  </body>
 </html><br><b>Sample Input:</b><br>5<br>5 1 4 2 3<br><br><b>Sample Output:</b><br>1<br><br><br><font color="gray">Memory limit: 256 MB</font><br><font color="gray">Time limit: 8 seconds</font><br><br>
 <a href="https://hyperskill.org/learn/step/4652">Show topic summary</a>
